--- a/templates/tag.html
+++ b/templates/tag.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="col">
                         <div>
-                            <a class="disabledButton" href="/read/{{ titles[i]['doi'] }}" style="color: #017bff; font-size: 1.4em; font-weight: 200;">{{ titles[i]["article"] }}</a>
+                            <a class="disabledButton" href="/read/{{ titles[i]['summary_id'] }}" style="color: #017bff; font-size: 1.4em; font-weight: 200;">{{ titles[i]["article"] }}</a>
                         </div>
                         <div class="pl-1" style="font-size: 0.8em">
                             Dcyphr-d by <a class="disabledButton" href="/public/{{ titles[i]['id'] }}" style="color: Red">@{{ titles[i]["username"] }}</a>
