--- a/templates/bookmarks.html
+++ b/templates/bookmarks.html
@@ -18,7 +18,7 @@
                 <div class="row">
                     <div class="col" style="font-size: 1.4em; color: #017bff">Remove</div>
                     <div class="col" style="font-size: 1.4em; color: #017bff"> Article</div>
-                    <div class="col-3" style="font-size: 1.4em; color: #017bff">PMID</div>
+                    <div class="col-3" style="font-size: 1.4em; color: #017bff">DOI</div>
                 </div>
                 <!--<th style="color: DodgerBlue">Article</th>-->
                 <!--<th style="color: DodgerBlue">PMID Number</th>-->
@@ -27,8 +27,8 @@
             <form method="POST" class="form">
             <tr class="">
                 <div class=" border-top border-bottom row contributeTable" style="line-height: 40px" >
-                    <div class="col" style="font-size: 1em"><button class="btn btn-link btn-lg" type="submit" value="{{ tasks[i]['doi'] }}" name="unbookmark"><i class="fa fa-bookmark border-0"></i></button></div>
-                    <div class="col" style="font-size: 1em"><a href="/edit/{{ tasks[i]['doi'] }}">{{ tasks[i]["article"] }}</a></div>
+                    <div class="col" style="font-size: 1em"><button class="btn btn-link btn-lg" type="submit" value="{{ tasks[i]['id'] }}" name="unbookmark"><i class="fa fa-bookmark border-0"></i></button></div>
+                    <div class="col" style="font-size: 1em"><a href="/edit/{{ tasks[i]['id'] }}">{{ tasks[i]["article"] }}</a></div>
                     <div class="col-3" style="font-size: 1em">{{ tasks[i]["doi"] }}</div>
                 </div>
             </tr>
