--- a/templates/browse.html
+++ b/templates/browse.html
@@ -50,10 +50,10 @@
                     </div>
                     <div class="col">
                         <div>
-                            <a class="disabledButton" href="{{links[i]}}" style="color: #017bff; font-size: 1.4em; font-weight: 200;">{{ summaries[i]["article"] }}</a>
+                            <a class="disabledButton" href="/read/{{ summaries[i]['id'] }}" style="color: #017bff; font-size: 1.4em; font-weight: 200;">{{ summaries[i]["article"] }}</a>
                         </div>
                         <div class="pl-1" style="font-size: 0.8em">
-                            dcyphr-d by <a class="disabledButton" href="public/{{ summaries[i]['id'] }}" style="color: Red">@{{ summaries[i]["username"] }}</a>
+                            dcyphr-d by <a class="disabledButton" href="public/{{ summaries[i]['user'] }}" style="color: Red">@{{ summaries[i]["username"] }}</a>
                         <div class="p-2" style="font-size: 0.95em">
                             {{ preview[i] }}...
                         </div>
