--- a/templates/profile.html
+++ b/templates/profile.html
@@ -38,7 +38,7 @@
     <div>
         <h2 class="mt-3" style="color: #017bff; font-weight: 200">Highlights</h2>
         {% for i in range(length) %}
-        <a href="/read/{{ articles[i]['doi'] }}" align="rights">{{ articles[i]["article"] }}</a><br>
+        <a href="/read/{{ articles[i]['id'] }}" align="rights">{{ articles[i]["article"] }}</a><br>
         {% endfor %}
         <div class="container mt-3 p-3 w-50 border-bottom"></div>
     </div>
