--- a/templates/public.html
+++ b/templates/public.html
@@ -22,7 +22,7 @@
 <div>
     <h2 class="mt-3" style="color: #ff2f2b; font-weight: 200">Highlights</h2>
     {% for i in range(length) %}
-    <a href="/read/{{ articles[i]['doi'] }}" align="rights">{{ articles[i]["article"] }}</a><br>
+    <a href="/read/{{ articles[i]['id'] }}" align="rights">{{ articles[i]["article"] }}</a><br>
     {% endfor %}
 </div>
 </div>
