changed request pmid

--- a/templates/request.html
+++ b/templates/request.html
@@ -16,7 +16,7 @@
 <form action="/request" method="POST" class="form-group">
     <input type="text" class="form-control" placeholder="Article name" name="article" required>
     <p></p>
-    <input type="text" class="form-control" placeholder="PMID number" name="doi" required>
+    <input type="text" class="form-control" placeholder="DOI" name="doi" required>
     <p></p>
     <input type="text" class="form-control" placeholder="Link" name="link" required>
     <p></p>
