--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -31,7 +31,7 @@
             <tr class="">
                 <div class=" border-top border-bottom row contributeTable" style="line-height: 40px" >
                     <div class="col" style="font-size: 1em"><a href="/edit/{{ tasks[i]['id'] }}">{{ tasks[i]["article"] }}</a></div>
-                    <div class="col-3" style="font-size: 1em">{{ tasks[i]["doi"] }}</div>
+                    <div class="col-3" style="font-size: 1em"><a href="/doi/{{ tasks[i]['id'] }}">{{ tasks[i]["doi"] }}</a></div>
                     <div class="col-2" style="font-size: 1em"><button class="btn btn-link btn-lg" type="submit" value="{{ tasks[i]['id'] }}" name="bookmark"><i class="fa fa-bookmark-o border-0"></i></button></div>
 
                 </div>
