removed team members

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,45 +91,45 @@
         </section>
     </div>
 
-        <div id="teammembers" class="p-5 mt-5">
-        <section class="w3-row-padding w3-center" >
-            <h2 class="display-4 mb-5 text-primary">team</h2>
-            <article class="w3-third">
-                <p><b style="color: black">Jeffrey Ma</p></b>
-                <p><b style="color: #017bff">Founder and CEO</p></b>
-                <p>jeffrey.ma.jzm5@yale.edu</p>
-            </article>
-            <article class="w3-third">
-                <b style="color: black"><p>Onyedikachi Uche</p></b>
-                <b style="color: #017bff"><p>Research Director</p></b>
-                <p>onyedikachi.uche@yale.edu</p>
-            </article>
-            <article class="w3-third">
-                <p><b>Aidan Neziri</p></b>
-                <b style="color: #017bff"><p>Business Director</p></b>
-                <p>aidan.neziri@yale.edu</p>
-            </article>
-        </section>
-        <br><br>
-        <br><br>
-        <section class="w3-row-padding w3-center">
-            <article class="w3-quarter">
-                <b><p>Ivan Chan</p></b>
-                <p>ivan.chan@yale.edu</p>
-            </article>
-            <article class="w3-quarter">
-                <b><p>Janet Hsu</p></b>
-                <p>janet.hsu@yale.edu</p>
-            </article>
-            <article class="w3-quarter">
-                <b><p>Jalil Morris</p></b>
-                <p>jalil.morris@yale.edu</p>
-            </article>
-            <article class="w3-quarter">
-                <b><p>Graham Stodolski</p></b>
-                <p>graham.stodolski@yale.edu</p>
-            </article>
-        </section><br><br>
-        </div>
+        <!--<div id="teammembers" class="p-5 mt-5">-->
+        <!--<section class="w3-row-padding w3-center" >-->
+        <!--    <h2 class="display-4 mb-5 text-primary">team</h2>-->
+        <!--    <article class="w3-third">-->
+        <!--        <p><b style="color: black">Jeffrey Ma</p></b>-->
+        <!--        <p><b style="color: #017bff">Founder and CEO</p></b>-->
+        <!--        <p>jeffrey.ma.jzm5@yale.edu</p>-->
+        <!--    </article>-->
+        <!--    <article class="w3-third">-->
+        <!--        <b style="color: black"><p>Onyedikachi Uche</p></b>-->
+        <!--        <b style="color: #017bff"><p>Research Director</p></b>-->
+        <!--        <p>onyedikachi.uche@yale.edu</p>-->
+        <!--    </article>-->
+        <!--    <article class="w3-third">-->
+        <!--        <p><b>Aidan Neziri</p></b>-->
+        <!--        <b style="color: #017bff"><p>Business Director</p></b>-->
+        <!--        <p>aidan.neziri@yale.edu</p>-->
+        <!--    </article>-->
+        <!--</section>-->
+        <!--<br><br>-->
+        <!--<br><br>-->
+        <!--<section class="w3-row-padding w3-center">-->
+        <!--    <article class="w3-quarter">-->
+        <!--        <b><p>Ivan Chan</p></b>-->
+        <!--        <p>ivan.chan@yale.edu</p>-->
+        <!--    </article>-->
+        <!--    <article class="w3-quarter">-->
+        <!--        <b><p>Janet Hsu</p></b>-->
+        <!--        <p>janet.hsu@yale.edu</p>-->
+        <!--    </article>-->
+        <!--    <article class="w3-quarter">-->
+        <!--        <b><p>Jalil Morris</p></b>-->
+        <!--        <p>jalil.morris@yale.edu</p>-->
+        <!--    </article>-->
+        <!--    <article class="w3-quarter">-->
+        <!--        <b><p>Graham Stodolski</p></b>-->
+        <!--        <p>graham.stodolski@yale.edu</p>-->
+        <!--    </article>-->
+        <!--</section><br><br>-->
+        <!--</div>-->
 </div>
 {% endblock %}
