--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm">
-            <h3><font color="#017bff"><b><a href="/browse">Read</a></b></font> or <font color="#017bff"><b><a href="/">find</a></b></font> an article</h3>
+            <h3><font color="#017bff"><b><a href="/browse/0">Read</a></b></font> or <font color="#017bff"><b><a href="/">find</a></b></font> an article</h3>
 <p align="left">Use the search bar in the navigation panel or on the homepage to search our database of summaries. Or go to browse to peruse what we have.
 If you don't see the article, that means it hasn't been summarized yet.</p>
 
