--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
                         <p class="card-text p-2">Browse dcyphr-d scientific articles for your classes. All summaries are moderated by professionals for accuracy.</p>
                     </div>
                     <div class="container">
-                        <a href="/browse" class="btn btn-primary">Browse</a>
+                        <a href="/browse/0" class="btn btn-primary">Browse</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 p-2 border" style="height: 250px; margin: 0 auto">
