--- a/templates/layout.html
+++ b/templates/layout.html
@@ -136,7 +136,7 @@
             <div class="collapse navbar-collapse" id="navbar">
                 {% if session.user_id %}
                     <ul class="navbar-nav mr-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/browse">Browse</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/browse/0">Browse</a></li>
                         <li class="nav-item"><a class="nav-link" href="/request">Request</a></li>
                         <li class="nav-tem"><a class="nav-link" href="/method/0">Methods</a></li>
                         <li class="nav-item"><a class="nav-link" href="/tasks">Contribute</a></li>
@@ -155,7 +155,7 @@
                     </ul>
                 {% else %}
                     <ul class="navbar-nav mr-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/browse">Browse</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/browse/0">Browse</a></li>
                         <li class="nav-item"><a class="nav-link" href="/request">Request</a></li>
                         <li class="nav-tem"><a class="nav-link" href="/method/0">Methods</a></li>
                         <li class="nav-tem"><a class="nav-link" href="/tasks">Contribute</a></li>
